--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "media-api",
   "version": "1.0.0",
   "description": "A nodeJS rest API to serve spotify API requests.",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "author": "Avil",
   "license": "ISC",
